# wavefront_shape_vs_intensity_experiments

./: .gitignore  .gitmodules  README.md  matplotlibrc  pyproject.toml
analysis/: config.py  plot_donuts.py  plotutils.py  sim.py  study_obscuration.py  study_sparsity.py  study_vignetting.py
notebooks/: plot_aberrations.ipynb  plot_by-eye-example.ipynb  plot_zernike_tables.ipynb
scripts/: plot_donuts.py  sim.py  study_obscuration.py  study_sparsity.py  study_vignetting.py
shape_vs_intensity/: __init__.py  config.py  plotutils.py  shape_vs_intensity.mplstyle  sim.py
